--- a/DNN/example.yaml
+++ b/DNN/example.yaml
@@ -19,3 +19,25 @@ logmel:
     - True
     mode:
     - 'magnitude'
+
+mel:
+    fs:
+    - 44100.  
+    n_mels:
+    - 40
+    fmin:
+    - 0.
+    fmax:
+    - 22050
+    mono:
+    - True
+    hamming_window:
+    - 1024.
+    noverlap:
+    - 0
+    detrend:
+    - False
+    return_onesided:
+    - True
+    mode:
+    - 'magnitude'
