--- a/Parallel_CNN/example4.yaml
+++ b/Parallel_CNN/example4.yaml
@@ -11,3 +11,25 @@ cqt:
     - 12
     window:
     - 'hamming'
+
+mel:
+    fs:
+    - 16000.  
+    n_mels:
+    - 64
+    fmin:
+    - 0.
+    fmax:
+    - 8000.
+    mono:
+    - True
+    hamming_window:
+    - 1024.
+    noverlap:
+    - 0
+    detrend:
+    - False
+    return_onesided:
+    - True
+    mode:
+    - 'magnitude'
